--- a/pages/nfts/styles.module.css
+++ b/pages/nfts/styles.module.css
@@ -7,4 +7,11 @@
     display: flex;
     flex: 0.7;
     padding: 0 2rem;
+    flex-direction: column;
+}
+
+.activity {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem;
 }
