--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,13 @@
     background: rgb(196, 57, 85);
     color: white;
 }
+
+.green {
+    background: rgb(1, 5, 47);
+    color: white;
+}
+
+.gold {
+    background: black;
+    color: white;
+}
